--- a/core/components/modhelpers/composer.json
+++ b/core/components/modhelpers/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "fzaninotto/Faker": "^1.6"
+        "fzaninotto/Faker": "^1.6",
+        "mobiledetect/mobiledetectlib": "^2.8"
     }
 }
