--- a/core/components/modhelpers/composer.json
+++ b/core/components/modhelpers/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "fzaninotto/Faker": "^1.6",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "symfony/http-foundation": "~3.2"
     }
 }
