--- a/core/components/modhelpers/composer.json
+++ b/core/components/modhelpers/composer.json
@@ -10,9 +10,11 @@
         }
     ],
     "require": {
+        "php": ">=5.5",
         "fzaninotto/Faker": "^1.7",
         "mobiledetect/mobiledetectlib": "^2.8",
-        "symfony/http-foundation": "~3.2"
+        "symfony/http-foundation": "~3.2",
+        "paragonie/random_compat": "^1|^2"
     },
     "autoload": {
         "files": [
