--- a/core/components/modhelpers/composer.json
+++ b/core/components/modhelpers/composer.json
@@ -19,6 +19,9 @@
     "autoload": {
         "files": [
             "functions/functions.php"
-        ]
+        ],
+        "psr-4": {
+            "modHelpers\\": "classes/"
+        }
     }
 }
