--- a/core/components/modhelpers/composer.json
+++ b/core/components/modhelpers/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "sergant210/modxhelpers",
-    "description": "Helpful functions for MODX",
+    "description": "Helpful functions for MODX Revolution",
     "license": "MIT",
     "authors": [
         {
@@ -10,16 +10,27 @@
         }
     ],
     "require": {
-        "php": ">=5.5",
-        "fzaninotto/Faker": "^1.7",
+        "php": ">=5.6",
         "mobiledetect/mobiledetectlib": "^2.8",
         "symfony/http-foundation": "~3.2",
         "paragonie/random_compat": "^1|^2",
-        "symfony/var-dumper": "^3.4"
+        "symfony/var-dumper": "^4.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8",
+        "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "psr-4": {
             "modHelpers\\": "classes/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "modHelpers\\Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "phpunit": "phpunit -c phpunit.xml"
     }
 }
